# auto-ij-dataset

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  program.md  pyproject.toml
datasets/public-validation-v1/: manifest.yaml
datasets/public-validation-v1/cases/: document-grounding-template.yaml  entity-link-alberto-safdie-as-financial-director.yaml  entity-link-golden-bridge-mossack-fonseca.yaml  entity-link-mango-myhold-shareholder.yaml  entity-link-template.yaml  followup-gold-template.yaml  leak-coverage-comparison-template.yaml  structured-public-record-adra-100005.yaml  structured-public-record-ancona-100008.yaml  structured-public-record-aragon-321102-lot-11.yaml  structured-public-record-attica-203906.yaml  structured-public-record-bank-of-england-9040.yaml  structured-public-record-bassano-romano-100032.yaml  structured-public-record-bus-eireann-27409.yaml  structured-public-record-castelo-branco-100037.yaml  structured-public-record-central-register-395126.yaml  structured-public-record-coventry-3037.yaml  (+48 more)
docs/: dataset-agent-scale-implementation-plan.md  foundations.md  ideas.md  public-validation-v1-status.md  roadmap.md
docs/references/: README.md  autonomous-loop.md  journalistic-training-suite.md  public-validation-methodology.md  sibling-stack-context.md  system-boundaries.md
results/: runs.tsv
rubrics/: citation-grounding.md  followup-suggestion-quality.md
scripts/: run-autonomous.sh
skills/document-to-markdown/: SKILL.md
src/auto_dataset/: cli.py  publishing.py  runner.py  validation.py
tests/: test_validation.py
(+169 files in other folders)
