[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-dataset"
version = "0.1.0"
description = "Automated dataset-building harness for investigative journalism evaluation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub>=0.30.0",
  "markitdown[docx,outlook,pdf,pptx,xls,xlsx]>=0.1.5",
  "PyYAML>=6.0",
]

[project.scripts]
auto-dataset = "auto_dataset.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
